--- a/Prot 1 func/avpersona.html
+++ b/Prot 1 func/avpersona.html
@@ -43,8 +43,8 @@
 						    	<li class="left-menu" data-msg="Avarias" data-help="Consulte as várias informações relativas a avarias do seu veículo" data-txt=" <div class='mainimage' style='background-image: url(./imgs/icons/car-tire.png)'></div>">
 						    		<a class="nav-button" href="avarias.html"><span class="mainicon glyphicon glyphicon-warning-sign"></span></a>
 						    	</li >
-							    <li class="left-menu" data-msg="Personalização" data-help="Personalize os vários constituintes do seu carro a gosto">
-							    	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-wrench"></span></a>
+							    <li class="left-menu usestore3" data-msg="Personalização" data-help="Personalize os vários constituintes do seu carro a gosto">
+							    	<a class="nav-button" href="persona.html"><span class="mainicon glyphicon glyphicon-wrench"></span></a>
 							    </li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
