--- a/Prot 1 func/conforto.html
+++ b/Prot 1 func/conforto.html
@@ -29,7 +29,7 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Avarias<br> <small> Histórico de avarias</small></h1>
+		  					<h1 class= "width act maintext">Personalização <small>Conforto</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
@@ -39,13 +39,13 @@
 		  			</div>
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
-						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu" data-msg="Pneu" data-help="Consulte a avaria e verifique a janela direita para mais informações" data-txt="<h4>Gravidade: <b>Grave</b></h4><p>Descrição: Pneu furado.</p><p>24/03/2230</p>">
-							    	<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/icons/roda.png)"></div></a>
-							    </li>
-						    	<li class="left-menu" data-msg="Motor a jacto" data-help="Consulte a avaria e verifique a janela direita para mais informações" data-txt="<h4>Gravidade: <b>Muito Grave</b></h4><p>Descrição: Motor inutilizável devido a entrada de uma ave para a turbina principal.</p><p>18/02/2230</p>">
-						    		<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/icons/jet.png)"></div></a>
+	  						<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
+						    	<li class="left-menu usestore3" data-msg="Assentos" data-help="Ajuste o número de assentos e ainda o seu material" data-txt="">
+						    		<a class="nav-button" href="seats.html"><div class="icon" style="background-image: url(./imgs/icons/seats.png)"></div></a>
 						    	</li >
+							    <li class="left-menu usestore3" data-msg="Vidros" data-help="Ajuste a cor e transparência dos vidros do seu veículo" data-txt="">
+							    	<a class="nav-button" href="glass.html"><div class="icon" style="background-image: url(./imgs/icons/glass.png)"></div></a>
+							    </li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
 								</li>
@@ -74,7 +74,7 @@
 		  			</div>
 		  			<div class="row top-buffer-main">
 		  				<div class="col-md-5 pull-right box smallpadding" id="mainwindow">
-		  					<div class="width act" id="maintext">
+		  					<div class="width act imagefield" id="maintext">
 		  					</div>
 		  				</div>
 		  			</div>
