--- a/Prot 1 func/resposta.html
+++ b/Prot 1 func/resposta.html
@@ -38,36 +38,37 @@
 			  			</div>
 		  			</div>
 		  			<div class="row">
-		  				<div id="sidebar" class="col-md-8 box smallpadding">
-						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu store" data-msg="Mensagem: 1 / 6" data-help="Resposta pré-definida - 1" data-txt="<h4> Mensagem: </h4><p>Sim, teria todo o gosto.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
-						    	</li>
-						    	<li class="left-menu store" data-msg="Mensagem: 2 / 6" data-help="Resposta pré-definida - 2" data-txt="<h4> Mensagem: </h4><p>Não, não me parece.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
-						    	</li>
-						    	<li class="left-menu store" data-msg="Mensagem: 3 / 6" data-help="Resposta pré-definida - 3" data-txt="<h4> Mensagem: </h4><p>Muito obrigado!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
-						    	</li>
-						    	<li class="left-menu store" data-msg="Mensagem: 4 / 6" data-help="Resposta pré-definida - 4" data-txt="<h4> Mensagem: </h4><p>Não tem nada que agradecer.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
-						    	</li>
-						    	<li class="left-menu store" data-msg="Mensagem: 5 / 6" data-help="Resposta pré-definida - 5" data-txt="<h4> Mensagem: </h4><p>Vai tu!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
-						    	</li>
-						    	<li class="left-menu store" data-msg="Mensagem: 6 / 6" data-help="Resposta pré-definida - 6" data-txt="<h4> Mensagem: </h4><p>Bem-vindo a Portugal!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
-						    	</li>
-								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
-									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
-								</li>
-						    </nav>
+		  				<div id="sidebar" class="col-md-8 box smallpadding" style="height: 360px">
+		  					<div id="top-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-up scrollicon"></span></div>
+		  					<div class="roll-scroll">
+							    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
+							    	<li class="left-menu store" data-msg="Mensagem: 1 / 6" data-help="Resposta pré-definida - 1" data-txt="<h4> Mensagem: </h4><p>Sim, teria todo o gosto.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+							    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 1</span></a>
+							    	</li>
+							    	<li class="left-menu store" data-msg="Mensagem: 2 / 6" data-help="Resposta pré-definida - 2" data-txt="<h4> Mensagem: </h4><p>Não, não me parece.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+							    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 2</span></a>
+							    	</li>
+							    	<li class="left-menu store" data-msg="Mensagem: 3 / 6" data-help="Resposta pré-definida - 3" data-txt="<h4> Mensagem: </h4><p>Muito obrigado!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+							    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 3</span></a>
+							    	</li>
+							    	<li class="left-menu store" data-msg="Mensagem: 4 / 6" data-help="Resposta pré-definida - 4" data-txt="<h4> Mensagem: </h4><p>Não tem nada que agradecer.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+							    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 4</span></a>
+							    	</li>
+							    	<li class="left-menu store" data-msg="Mensagem: 5 / 6" data-help="Resposta pré-definida - 5" data-txt="<h4> Mensagem: </h4><p>Vai tu!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+							    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 5</span></a>
+							    	</li>
+							    	<li class="left-menu store" data-msg="Mensagem: 6 / 6" data-help="Resposta pré-definida - 6" data-txt="<h4> Mensagem: </h4><p>Bem-vindo a Portugal!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>" style="opacity: 0; height: 0px">
+							    		<a id="bottom-elem" class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 6</span></a>
+							    	</li>
+									<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="" style="opacity: 0; height: 0px">
+										<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
+									</li>
+							    </nav>
+						    </div>
+							<div id="bottom-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-down scrollicon"></span></div>
 						</div>
-						<div class="col-md-4 padding2">
+						<div class="col-md-4 padding2 top-buffer20">
 							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
-								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
-								</li>
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
