--- a/Prot 1 func/suspension.html
+++ b/Prot 1 func/suspension.html
@@ -29,7 +29,7 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Avarias<br> <small> Histórico de avarias</small></h1>
+		  					<h1 class= "width act maintext">Personalização <small>Suspensão</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
@@ -39,13 +39,16 @@
 		  			</div>
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
-						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu" data-msg="Pneu" data-help="Consulte a avaria e verifique a janela direita para mais informações" data-txt="<h4>Gravidade: <b>Grave</b></h4><p>Descrição: Pneu furado.</p><p>24/03/2230</p>">
-							    	<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/icons/roda.png)"></div></a>
-							    </li>
-						    	<li class="left-menu" data-msg="Motor a jacto" data-help="Consulte a avaria e verifique a janela direita para mais informações" data-txt="<h4>Gravidade: <b>Muito Grave</b></h4><p>Descrição: Motor inutilizável devido a entrada de uma ave para a turbina principal.</p><p>18/02/2230</p>">
-						    		<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/icons/jet.png)"></div></a>
+	  						<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
+						    	<li class="left-menu usestore3 store" data-msg="Rebaixado" data-help="Altere a sua suspensão para uma suspensão baixa" data-txt="#suspension">
+						    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/tinyspring.png)"></div></a>
 						    	</li >
+							    <li class="left-menu usestore3 store" data-msg="Normal" data-help="Altere a sua suspensão para uma suspensão normal, opção por defeito" data-txt="#suspension">
+							    	<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/normalspring.png)"></div></a>
+							    </li>
+								<li class="left-menu usestore3 store" data-msg="Alta" data-help="Altere a sua suspensão para uma suspensão alta" data-txt="#suspension">
+									<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/bigspring.png)"></div></a>
+								</li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
 								</li>
@@ -53,6 +56,9 @@
 						</div>
 						<div class="col-md-4 padding2">
 							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
@@ -74,7 +80,7 @@
 		  			</div>
 		  			<div class="row top-buffer-main">
 		  				<div class="col-md-5 pull-right box smallpadding" id="mainwindow">
-		  					<div class="width act" id="maintext">
+		  					<div class="width act imagefield" id="maintext">
 		  					</div>
 		  				</div>
 		  			</div>
