--- a/Prot 1 func/avarias.html
+++ b/Prot 1 func/avarias.html
@@ -29,7 +29,7 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Personalização e Avarias<br> <small>Avarias</small></h1>
+		  					<h1 class= "width act maintext">Avarias</h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
