--- a/Prot 1 func/index.html
+++ b/Prot 1 func/index.html
@@ -38,33 +38,34 @@
 			  			</div>
 		  			</div>
 		  			<div class="row">
-		  				<div id="sidebar" class="col-md-8 box smallpadding">
-						    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
-						    	<li class="left-menu" data-msg="Calendário" data-help="Ver o calendário, consultar tarefas e marcações agendadas" data-txt="">
-							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-calendar"></span></a>
-							  	</li>
-						    	<li class="left-menu" data-msg="Câmaras" data-help="Ver, tirar fotos e muito mais usando as câmaras dos passageiros" data-txt="">
-							  		<a class="nav-button" href="camara.html"><span class="mainicon glyphicon glyphicon-camera"></span></a>
-							  	</li>
-							  	<li class="left-menu" data-msg="Compras" data-help="Compre e reserve produtos com entrega ao domicílio" data-txt="">
-							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-shopping-cart"></span></a>
-							  	</li>
-							  	<li class="left-menu" data-msg="GPS" data-help="Seguir rotas, encontrar pontos de interesse, pesquisar moradas e muito mais" data-txt="">
-							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-globe"></span></a>
-							  	</li>
-							    <li class="left-menu" data-msg="Mensagens" data-help="Enviar e ver mensagens recebidas de outros utilizadores" data-txt="">
-							      	<a class="nav-button" href="mensagens.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
-							    </li>
-							  	<li class="left-menu" data-msg="Personalização/ Avarias" data-help="Personalizar o seu carro e verificar as avarias registadas" data-txt="">
-							  		<a class="nav-button" href="avpersona.html"><span class="mainicon glyphicon glyphicon-cog"></span><span class="glyphicon glyphicon-cog"></span></a>
-							  	</li>
-						    </nav>
+		  				<div id="sidebar" class="col-md-8 box smallpadding" style="height: 300px">
+		  					<div id="top-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-up scrollicon"></span></div>
+		  					<div class="roll-scroll">
+							    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
+							    	<li class="left-menu" data-msg="Calendário" data-help="Ver o calendário, consultar tarefas e marcações agendadas" data-txt="">
+								  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-calendar"></span></a>
+								  	</li>
+							    	<li class="left-menu" data-msg="Câmaras" data-help="Ver, tirar fotos e muito mais usando as câmaras dos passageiros" data-txt="">
+								  		<a class="nav-button" href="camara.html"><span class="mainicon glyphicon glyphicon-camera"></span></a>
+								  	</li>
+								  	<li class="left-menu" data-msg="Compras" data-help="Compre e reserve produtos com entrega ao domicílio" data-txt="">
+								  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-shopping-cart"></span></a>
+								  	</li>
+								  	<li class="left-menu" data-msg="GPS" data-help="Seguir rotas, encontrar pontos de interesse, pesquisar moradas e muito mais" data-txt="">
+								  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-globe"></span></a>
+								  	</li>
+								    <li class="left-menu" data-msg="Mensagens" data-help="Enviar e ver mensagens recebidas de outros utilizadores" data-txt="" style="opacity: 0; height: 0px">
+								      	<a id="bottom-elem" class="nav-button" href="mensagens.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+								    </li>
+								  	<li class="left-menu" data-msg="Personalização/ Avarias" data-help="Personalizar o seu carro e verificar as avarias registadas" data-txt="" style="opacity: 0; height: 0px">
+								  		<a class="nav-button" href="avpersona.html"><span class="mainicon glyphicon glyphicon-cog"></span><span class="glyphicon glyphicon-cog"></span></a>
+								  	</li>
+							    </nav>
+							</div>
+							<div id="bottom-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-down scrollicon"></span></div>
 						</div>
-						<div class="col-md-4 padding2">
+						<div class="col-md-4 padding2 top-buffer20">
 							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
-								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
-								</li>
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
