--- a/Prot 1 func/insultos.html
+++ b/Prot 1 func/insultos.html
@@ -41,13 +41,13 @@
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
 						    	<li class="left-menu store" data-msg="Mensagem: 1 / 3" data-help="Mensagem pré-definida de insulto - 1" data-txt="<h4> Mensagem: </h4><p>Sai da frente oh palhaço!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 1</span></a>
 						    	</li>
 						    	<li class="left-menu store" data-msg="Mensagem: 2 / 3" data-help="Mensagem pré-definida de insulto - 2" data-txt="<h4> Mensagem: </h4><p>A minha avó conduz melhor que tu e não vê!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 2</span></a>
 						    	</li>
 						    	<li class="left-menu store" data-msg="Mensagem: 3 / 3" data-help="Mensagem pré-definida de insulto - 3" data-txt="<h4> Mensagem: </h4><p>404 - Carta não encontrada.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 3</span></a>
 						    	</li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
@@ -56,6 +56,12 @@
 						</div>
 						<div class="col-md-4 padding2">
 							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
