--- a/Prot 1 func/persona.html
+++ b/Prot 1 func/persona.html
@@ -29,7 +29,7 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Mensagens<br> <small>Temas</small></h1>
+		  					<h1 class= "width act maintext">Personalização <small>Conforto</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
@@ -39,33 +39,36 @@
 		  			</div>
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding" style="height: 300px">
-				  			<div id="top-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-up scrollicon"></span></div>
-	  						<div class="roll-scroll">
-								<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-								    <li class="left-menu" data-msg="Avisos" data-help="Mensagens de aviso relacionadas com a condução" data-txt="<h4> Exemplos: </h4><p>Cuidado! Acabei de passar por uma operação stop.</p>">
-								    	<a class="nav-button" href="avisos.html"><span class="mainicon glyphicon glyphicon-exclamation-sign"></span></a>
-								    </li >
-									<li class="left-menu" data-msg="Convites" data-help="Convites para sair ou outras actividades" data-txt="<h4> Exemplos: </h4><p>Olá, não pude deixar de reparar em ti. Queres ir beber um café logo?</p>">
-									    <a class="nav-button" href="convites.html"><span class="mainicon glyphicon glyphicon-cutlery"></span></a>
-									</li>
-									<li class="left-menu" data-msg="Críticas" data-help="Criticas boas/más relaccionadas com a condução alheia" data-txt="<h4> Exemplos: </h4><p>Não aceleres tanto nesta estrada.</p>">
-									    <a class="nav-button" href="criticas.html"><span class="mainicon glyphicon glyphicon-road"></span></a>
-									    </li>
-									<li class="left-menu" data-msg="Piropos" data-help="Piropos diversificados e que, com sorte, terão impacto certo!" data-txt="<h4> Exemplos: </h4><p>Epah, pareces um helicóptero... Gira e boa!</p>">
-										<a class="nav-button" href="piropos.html"><span class="mainicon glyphicon glyphicon-eye-close"></span></a>
-									</li>
-									<li class="left-menu" data-msg="Insultos" data-help="Insultos diversificados que farão qualquer condutor pensar 2 vezes ao olhar para si novamente" data-txt="<h4> Exemplos: </h4><p>Sai da frente oh palhaço!</p>" style="opacity: 0; height: 0px">
-										<a id="bottom-elem" class="nav-button" href="insultos.html"><span class="mainicon glyphicon glyphicon-thumbs-down"></span></a>
-									</li>
+		  					<div id="top-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-up scrollicon"></span></div>
+		  					<div class="roll-scroll">
+		  						<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
+							    	<li class="left-menu usestore3" data-msg="Favoritos" data-help="Consulte as várias configurações definidas por si" data-txt="">
+							    		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-star"></span></a>
+							    	</li >
+								    <li class="left-menu usestore3" data-msg="Conforto" data-help="Personalize os vários constituintes relaccionados com conforto (ajuste dos bancos, estofos, etc.)" data-txt="">
+								    	<a class="nav-button" href="conforto.html"><div class="icon" style="background-image: url(./imgs/icons/seat.png)"></div></a>
+								    </li>
+								    <li class="left-menu usestore3" data-msg="Performance" data-help="Personalize os vários constituintes relaccionados com a performance do seu veículo (motor, suspensão, direcção, etc.)" data-txt="">
+								    	<a class="nav-button" href="performance.html"><div class="icon" style="background-image: url(./imgs/icons/performance2.png)"></div></a>
+								    </li>
+								    <li class="left-menu usestore3" data-msg="Guardar alterações" data-help="Guardar as alterações até agora efectuadas no seu carro" data-txt="Cenas até agora alteradas">
+							    		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-floppy-disk"></span></a>
+							    	</li >
+							    	<li class="left-menu usestore3" data-msg="Descartar alterações" data-help="Descartar as alterações até agora efectuadas no seu carro" data-txt="Cenas até agora alteradas" style="opacity: 0; height: 0px">
+							    		<a id="bottom-elem" class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-trash"></span></a>
+							    	</li >
+							    	<li class="left-menu usestore3" data-msg="Definições de fábrica" data-help="Restaurar os vários constituintes activos por defeito" data-txt="Definições de fábrica" style="opacity: 0; height: 0px">
+							    		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-repeat"></span></a>
+							    	</li >
 									<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="" style="opacity: 0; height: 0px">
 										<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
 									</li>
-								</nav>
-							</div>
-							<div id="bottom-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-down scrollicon"></span></div>
+							    </nav>
+		  					</div>
+		  					<div id="bottom-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-down scrollicon"></span></div>
 						</div>
 						<div class="col-md-4 padding2 top-buffer20">
-							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left" style>
+							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
@@ -93,7 +96,7 @@
 		  			</div>
 		  			<div class="row top-buffer-main">
 		  				<div class="col-md-5 pull-right box smallpadding" id="mainwindow">
-		  					<div class="width act" id="maintext">
+		  					<div class="width act imagefield" id="maintext">
 		  					</div>
 		  				</div>
 		  			</div>
