--- a/Prot 1 func/piropos.html
+++ b/Prot 1 func/piropos.html
@@ -41,16 +41,16 @@
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
 						    	<li class="left-menu store" data-msg="Mensagem: 1 / 4" data-help="Mensagem pré-definida de piropo - 1" data-txt="<h4> Mensagem: </h4><p>Epah, pareces um helicóptero... Gira e boa!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 1</span></a>
 						    	</li>
 						    	<li class="left-menu store" data-msg="Mensagem: 2 / 4" data-help="Mensagem pré-definida de piropo - 2" data-txt="<h4> Mensagem: </h4><p>Oh jóia! Anda cá ao ourives!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 2</span></a>
 						    	</li>
 						    	<li class="left-menu store" data-msg="Mensagem: 3 / 4" data-help="Mensagem pré-definida de piropo - 3" data-txt="<h4> Mensagem: </h4><p>Tu aí cheia de curvas e eu aqui sem travões.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 3</span></a>
 						    	</li>
 						    	<li class="left-menu store" data-msg="Mensagem: 4 / 4" data-help="Mensagem pré-definida de piropo - 4" data-txt="<h4> Mensagem: </h4><p>Acreditas em amor à primeira vista ou tenho que passar por aqui mais uma vez?</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span><span class="mainicon"> 4</span></a>
 						    	</li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
@@ -59,6 +59,15 @@
 						</div>
 						<div class="col-md-4 padding2">
 							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
